--- a/sass/hbmenu.sass
+++ b/sass/hbmenu.sass
@@ -15,18 +15,91 @@ $fonts: "Montserrat",georgia,serif
 body
 	margin: 0
 	padding: 0
+	font-family: $fonts
 a
 	text-decoration: none
 	font-family: $fonts
 ul, li, a
 	+transitions(.3s)
+button, a
+	cursor: pointer
 .w280
 	width: 280px
-.header-menu
+header
 	max-width: 1280px
-	background: $menucolor
 	margin: 0 auto
+	display: block
+	position: relative
+	.top
+		width: 100%
+		height: 40px
+		line-height: 40px
+		padding: 0 16px
+		.social
+
+		span.right
+			display: block
+			text-align: right
+			font-size: 14px
+	.middle
+		height: 100px
+		display: flex
+		align-items: center
+		.account-menu
+			display: block
+			flex-basis: 0
+			flex-grow: 4
+			flex-shrink: 1
+			a
+				display: inline-block
+				padding: 0 16px
+				font-size: 12px
+				color: #888
+				height: 32px
+				line-height: 32px
+				img
+					vertical-align: middle
+		.search-container
+			display: block
+			flex-basis: 0
+			flex-grow: 1.5
+			flex-shrink: 1
+			height: 50px
+			line-height: 50px
+			border: 1px solid #777
+			padding: 0 16px
+			position: relative
+			input[type="search"]
+				height: 50px
+				line-height: 50px
+				width: 90%
+				border: none
+				font-size: 16px
+				background: transparent
+			button
+				position: absolute
+				right: 0
+				top: 0
+				height: 50px
+				width: 50px
+				background: transparent
+				border: none
+				img
+					vertical-align: middle
+		.logo-container
+			display: block
+			flex-basis: 0
+			flex-grow: 1.5
+			flex-shrink: 1
+			height: 64px
+			text-align: center
+			img
+				height: 100%
+				width: auto
+.header-menu
+	background: $menucolor
 	padding: 0
+	margin: 0
 	li.level-1
 		display: inline-block
 		font-weight: 600
