--- a/sass/hbmenu.sass
+++ b/sass/hbmenu.sass
@@ -186,4 +186,39 @@ header
 					display: block
 					height: 32px
 					line-height: 32px
-			
+	@media ( max-width: 640px )
+		li.level-1
+			display: block
+@media ( max-width: 640px )
+	.desktop-only
+		display: none !important
+@media ( min-width: 641px )
+	.mobile-only
+		display: none !important
+
+.mobile-logo
+	width: 100%
+	text-align: center
+	padding: 32px 0
+.main-thumb-menu
+	display: none
+	&:checked
+		+ label
+			filter: invert(37%) sepia(71%) saturate(3678%) hue-rotate(206deg) brightness(77%) contrast(97%)
+
+.main-menu
+	display: flex
+	background: $menucolor
+	padding: 0 16px
+	.main-thumb-menu-label
+		display: block
+		text-align: center
+		flex-grow: 1
+		flex-shrink: 1
+		flex-basis: 0
+		height: 50px
+		line-height: 64px
+		cursor: pointer
+		img
+			&:hover, &:focus, &:active
+				filter: invert(37%) sepia(71%) saturate(3678%) hue-rotate(206deg) brightness(77%) contrast(97%)
