script handling collapsing menu

--- a/sass/hbmenu.sass
+++ b/sass/hbmenu.sass
@@ -230,6 +230,7 @@ header
 				display: block
 				width: 100%
 				text-align: center
+				background: lighten($menucolor, 8%)
 	#menu-2:checked
 		~
 			.middle
@@ -242,6 +243,7 @@ header
 				.account-menu
 					width: 100%
 					text-align: center
+					background: lighten($menucolor, 5%)
 					display: block
 .mobile-logo
 	width: 100%
