--- a/sass/hbmenu.sass
+++ b/sass/hbmenu.sass
@@ -33,8 +33,29 @@ header
 	.top
 		width: 100%
 		padding: 0 16px
-		.social
-			// 
+		.top-badges
+			position: fixed
+			top: 0
+			a
+				display: inline-block
+				color: #fff
+				height: 40px
+				line-height: 40px
+				padding: 0 16px
+				margin-right: 4px
+				+borderradius(0 0 8px 8px)
+				&.badge-wa
+					background: #20b038
+				&.badge-gc
+					background: #ff9300
+				&.badge-ig
+					background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%)
+				img
+					filter: invert(100%)
+					height: 24px
+					vertical-align: middle
+				span
+					@extend .desktop-only
 		span.right
 			height: 40px
 			line-height: 40px
@@ -307,7 +328,7 @@ header
 .mobile-logo
 	width: 100%
 	text-align: center
-	padding: 32px 0
+	padding: 48px 0 16px
 .main-thumb-menu
 	display: none
 	&:checked
