if nothing more: DONE

--- a/sass/hbmenu.sass
+++ b/sass/hbmenu.sass
@@ -337,7 +337,7 @@ header
 .mobile-logo
 	width: 100%
 	text-align: center
-	padding: 48px 0 16px
+	padding: 54px 0 20px
 .main-thumb-menu
 	display: none
 	&:checked
@@ -360,3 +360,7 @@ header
 		// img
 		// 	&:hover, &:focus, &:active
 		// 		filter: invert(37%) sepia(71%) saturate(3678%) hue-rotate(206deg) brightness(77%) contrast(97%)
+	// &.sticky
+	// 	position: fixed
+	// 	top: 0
+	// 	width: 100%
