--- a/sass/hbmenu.sass
+++ b/sass/hbmenu.sass
@@ -236,8 +236,10 @@ header
 			top: 50px
 			background: lighten($menucolor, 8%)
 			padding-left: 0
+			@media screen and ( min-width: 641px )
+				padding-bottom: 24px
 			.column
-				display: block
+				display: table
 				flex-basis: 0
 				flex-grow: 1
 				flex-shrink: 1
@@ -245,9 +247,20 @@ header
 			&:hover
 				height: auto
 				display: flex
-			a
+			a.menu-banner
 				font-size: 14px
 				white-space: nowrap
+				// display: contents
+				min-height: 112px
+				img
+					margin-top: 24px
+					display: block
+					width: 168px
+					+borderradius(8px)
+					@extend .desktop-only
+				span
+					height: 40px
+					display: block
 			.lists
 				@extend .desktop-only
 				a
